# event-scheduler-app

./: CMakeLists.txt  Dockerfile  event_scheduler_cpp  main.cpp  models.hpp  scheduler.cpp  scheduler.hpp
dsa/: backtracking.cpp  backtracking.hpp  graph_coloring.cpp  graph_coloring.hpp  greedy_scheduler.cpp  greedy_scheduler.hpp  priority_queue.cpp  priority_queue.hpp  segment_tree.cpp  segment_tree.hpp
